--- a/meu-portfolio/index.html
+++ b/meu-portfolio/index.html
@@ -44,7 +44,7 @@
     <section class="about fade-in" id="about">
         <div class="about-text">
             <h2>Sobre Mim</h2>
-            <p>Gestor de Projetos com forte atuação nas áreas de marketing digital, branding e comunicação estratégica. Atualmente cursando Engenharia Informática e Telecomunicações na Universidade Óscar Ribas.</p>
+            <p>Gestor de Projetos com forte atuação nas áreas de marketing digital, branding e comunicação estratégica. Atualmente cursando Engenharia Informática e Telecomunicações.</p>
             <p>Experiência consolidada em projetos de rebranding, campanhas de posicionamento, estratégias de lançamento e criação de conteúdo. Capacidade de integrar equipes multidisciplinares e conduzir iniciativas orientadas a resultados.</p>
             <p>Domínio em português (nativo), inglês (intermediário avançado) e francês (básico), com certificações em Brand Management e Gestão Ágil de Projetos.</p>
             
@@ -78,7 +78,7 @@
                     <div class="project-content">
                         <h3>Rebranding Apnotec → WeExótica</h3>
                         <div class="company">Projeto Independente</div>
-                        <p>Liderança completa do processo de reposicionamento da marca Apnotec para WeExótica. Desenvolvimento de nova identidade visual, estratégia de comunicação digital e alinhamento da proposta de valor para o mercado.</p>
+                        <p>Neste Projeto Trabelhei diretamente no processo de reposicionamento da marca Apnotec para WeExótica. Desde o Valor comunicativo envolta da marca em sí, taanto para empresa, colaboradores e clientes, destacando o valor do branding no reposicionamento da marca, junto com a equipa e desenvolvimento , trabalhou-se no Desenvolvimento da nova identidade visual, estratégia de comunicação digital e alinhamento da proposta de valor para o mercado.</p>
                         <div class="project-stats">
                             <div class="stat">
                                 <div class="stat-number">100%</div>
@@ -101,7 +101,7 @@
                     <div class="project-content">
                         <h3>Lançamento E-manual Coach Madalena Quiala</h3>
                         <div class="company">Hype Angola</div>
-                        <p>Gestão completa de campanhas e conteúdos para o lançamento do e-manual da coach Madalena Quiala. Desenvolvimento de estratégia digital, criação de conteúdo e coordenação de equipes criativas.</p>
+                        <p>Neste projeto trabalhhei diretamente na Gestão completa de campanhas e conteúdos para o lançamento do e-manual da coach Madalena Quiala.Juntamente com a equipa da Hype Digital Desenvolvemos estratégias digital afim de levar a campanha de lançamento aos ecrãs e ouvidos do público certo, aquels que sabiam que precisavam e também para aqueles que precisavam e só não sabiam que precisavam, de acordo com a pretenção da cliente consegui passar a voz para a equipe de denvolvimento, resultando na criação de conteúdo e coordenação de equipes criativas.</p>
                         <div class="project-stats">
                             <div class="stat">
                                 <div class="stat-number">15 meses</div>
@@ -124,7 +124,7 @@
                     <div class="project-content">
                         <h3>Clube dos Génios - Times Square</h3>
                         <div class="company">CSPace</div>
-                        <p>Coordenação geral do lançamento da primeira plataforma de educação financeira em Angola, apresentada na Times Square. Produção de conteúdo, desenvolvimento de website e estratégia de lançamento completa.</p>
+                        <p>Neste projeto muito desafiador, trabalhei como gestor de projeto digital e também estrategsta de marketing,  na Coordenação geral do lançamento da primeira plataforma de educação financeira em Angola, apresentada na Times Square. de acordo a visão da empresa clube dos genios e sua proposta, acompanhei a equipa de desenvolvedores web da apnotec na criação e materialização do projeto, a cada etapa, até a conclusão para que assim pudéssemos colocar em prática as estratégias de marketing parao lançcamento da plataforma, desde o posicioamento nas redes sociais e Produção de conteúdo.</p>
                         <div class="project-stats">
                             <div class="stat">
                                 <div class="stat-number">1ª</div>
@@ -273,4 +273,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
